--- a/index.html
+++ b/index.html
@@ -479,7 +479,10 @@
                 Software Developer & Machine Learning Engineer
               </h2>
               <p class="text-neutral-300 mb-8 text-lg">
-                Building innovative solutions at the intersection of software development and machine learning.
+                A 3rd year AI student @ Manipal, Passionate about building software around Human Centric AI | playing
+                around with LLMs, Full Stack web and Mobile dev, Computer Vision, Robotics, and scalable system
+                architecture.
+                <br>
                 Based in Bangalore, India.
               </p>
               <div class="flex space-x-4">
@@ -504,6 +507,15 @@
                     </svg>
                     <span class="text-neutral-300">chandancvp08@gmail.com</span>
                   </div>
+                  <div class="space-y-4">
+                    <div class="flex items-center space-x-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20"
+                        fill="currentColor">
+                        <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                        <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                      </svg>
+                      <span class="text-neutral-300">chandan.mitblr2022@learner.manipal.edu</span>
+                    </div>
                   <!-- <div class="flex items-center space-x-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20" fill="currentColor">
                   <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
@@ -579,6 +591,11 @@
                       <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
                       <span class="text-neutral-300">React/Next.js</span>
                     </div>
+                    <div class="flex items-center space-x-2">
+                      <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+                      <span class="text-neutral-300">Svelte kit</span>
+                    </div>
+                    
                   </div>
                   <div class="space-y-2">
                     <div class="flex items-center space-x-2">
@@ -591,7 +608,11 @@
                     </div>
                     <div class="flex items-center space-x-2">
                       <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
-                      <span class="text-neutral-300">AWS/Cloud</span>
+                      <span class="text-neutral-300">Cloud (GCP / AWS)</span>
+                    </div>
+                    <div class="flex items-center space-x-2">
+                      <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+                      <span class="text-neutral-300">Golang</span>
                     </div>
                   </div>
                 </div>
@@ -739,6 +760,25 @@
   </htmlCode>
 </element>
 
+
+<!-- <script>
+  let courses = ['Generative AI', 'Data Mining', 'Pattern Recognition', 'Neural Networks and Deep Learning', 'Natural Language Processing', 'Fundamentals of Machine Learning', 'Data Structures', 'Algorithms', 'Database Management Systems', 'Object-Oriented Programming', 'Discrete Mathematics', 'Probability and Statistics', 'Linear Algebra', 'Computer Vision'];
+  const container = document.getElementById('CoursesContainer');
+
+  courses.forEach(course => {
+    const courseElement = document.createElement('div');
+    // courseElement.classList.add('flex', 'items-center', 'space-x-2');
+    // courseElement.innerHTML = `
+    //   <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+    //   <span class="text-neutral-300">${course}</span>
+    // `;
+    const lol = document.createElement('p');
+    lol.textContent = course;
+    courseElement.appendChild(p);
+    container.appendChild(courseElement);
+  });
+
+</script> -->
 <!-- Education -->
 <element id="f30e0562-0b80-44a3-95cc-16054f6db41d" data-section-id="f30e0562-0b80-44a3-95cc-16054f6db41d">
   <htmlCode>
@@ -762,11 +802,24 @@
 
             <div class="mt-8">
               <h4 class="text-lg font-semibold text-white mb-4">Key Courses</h4>
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-3" id="CoursesContainer">
+                <div class="flex items-center space-x-2">
+                  <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+                  <span class="text-neutral-300">Generative AI</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                  <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+                  <span class="text-neutral-300">Neural Networks and Deep Learning</span>
+                </div>
                 <div class="flex items-center space-x-2">
                   <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
                   <span class="text-neutral-300">Natural Language Processing</span>
                 </div>
+                <div class="flex items-center space-x-2">
+                  <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
+                  <span class="text-neutral-300">Pattern Recognition</span>
+                </div>
+
                 <div class="flex items-center space-x-2">
                   <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
                   <span class="text-neutral-300">Machine Learning</span>
@@ -1246,11 +1299,20 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-500" fill="none"
                       viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                    <a href="mailto:chandan.mitblr2022@learner.manipal.edu"
+                      class="text-neutral-300 hover:text-emerald-500 transition-colors">chandan.mitblr2022@learner.manipal.edu</a>
+                  </div>
+                  <!-- <div class="flex items-center space-x-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-500" fill="none"
+                      viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
                     <a href="tel:+917676654906" class="text-neutral-300 hover:text-emerald-500 transition-colors">+91
                       7676654906</a>
-                  </div>
+                  </div> -->
                   <div class="flex items-center space-x-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-500" fill="none"
                       viewBox="0 0 24 24" stroke="currentColor">
@@ -1282,8 +1344,8 @@
             </div>
 
             <!-- Contact Form -->
-            <div class="animate__animated animate__fadeInRight">
-              <form class="bg-neutral-900 rounded-xl p-8">
+            <div class="animate__animated animate__fadeInRight  flex  items-center">
+              <!-- <form class="bg-neutral-900 rounded-xl p-8">
                 <div class="mb-6">
                   <label for="name" class="block text-neutral-300 mb-2">Name</label>
                   <input type="text" id="name"
@@ -1298,10 +1360,11 @@
                   <label for="message" class="block text-neutral-300 mb-2">Message</label>
                   <textarea id="message" rows="4"
                     class="w-full bg-neutral-800 border border-neutral-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500"></textarea>
-                </div>
+                </div> -->
                 <button type="submit"
-                  class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold py-3 rounded-lg transition-colors">
-                  Send Message
+                onclick="window.location.href = 'mailto:chandancvp08@gmail.com';"
+                  class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold py-3 rounded-lg transition-colors ">
+                  Send Me a Message
                 </button>
               </form>
             </div>
