--- a/index.html
+++ b/index.html
@@ -508,13 +508,13 @@
                     <span class="text-neutral-300">chandancvp08@gmail.com</span>
                   </div>
                   <div class="space-y-4">
-                    <div class="flex items-center space-x-3">
+                    <div class="flex items-center space-x-3 max:w-screen">
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20"
                         fill="currentColor">
                         <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
                         <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
                       </svg>
-                      <span class="text-neutral-300">chandan.mitblr2022@learner.manipal.edu</span>
+                      <p class="text-neutral-300 text-xs md:text-base">chandan.mitblr2022@learner.manipal.edu</p>
                     </div>
                   <!-- <div class="flex items-center space-x-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20" fill="currentColor">
@@ -1302,7 +1302,7 @@
                         d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
                     <a href="mailto:chandan.mitblr2022@learner.manipal.edu"
-                      class="text-neutral-300 hover:text-emerald-500 transition-colors">chandan.mitblr2022@learner.manipal.edu</a>
+                      class="text-neutral-300 hover:text-emerald-500 transition-colors text-xs md:text-base">chandan.mitblr2022@learner.manipal.edu</a>
                   </div>
                   <!-- <div class="flex items-center space-x-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-500" fill="none"
