changed icrafmn link

--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="space-y-4">
                   <div class="group">
-                    <a href="https://www.icrafmn2024.com/" target="_blank"
+                    <a href="https://icrafmn24-site.vercel.app/" target="_blank"
                       class="block p-4 bg-neutral-900 rounded-lg hover:bg-neutral-700 transition-all">
                       <h4 class="text-white font-medium group-hover:text-emerald-500">ICRAFMN 2024</h4>
                       <p class="text-neutral-400">Manipal University Jaipur | Svelte + Tailwind</p>
