added youtube video

--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                 <a href="#about" class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">About</a>
                 <a href="#experience"
                   class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Experience</a>
-                  <a href="#education"
-                    class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Education</a>
-                  <a href="#projects" class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Projects</a>
+                <a href="#education"
+                  class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Education</a>
+                <a href="#projects" class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Projects</a>
                 <a href="#skills" class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Skills</a>
                 <a href="#leadership"
                   class="text-neutral-300 hover:text-white px-3 py-2 rounded-md text-sm">Leadership</a>
@@ -411,8 +411,8 @@
             <a href="#about" class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">About</a>
             <a href="#experience"
               class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">Experience</a>
-              <a href="#education"
-                class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">Education</a>
+            <a href="#education"
+              class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">Education</a>
             <a href="#projects"
               class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">Projects</a>
             <a href="#skills" class="text-neutral-300 hover:text-white block px-3 py-2 rounded-md text-base">Skills</a>
@@ -516,26 +516,26 @@
                       </svg>
                       <p class="text-neutral-300 text-xs md:text-base">chandan.mitblr2022@learner.manipal.edu</p>
                     </div>
-                  <!-- <div class="flex items-center space-x-3">
+                    <!-- <div class="flex items-center space-x-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20" fill="currentColor">
                   <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
                 </svg>
                 <span class="text-neutral-300">+91 7676654906</span>
               </div> -->
-                  <div class="flex items-center space-x-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20"
-                      fill="currentColor">
-                      <path fill-rule="evenodd"
-                        d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                        clip-rule="evenodd" />
-                    </svg>
-                    <span class="text-neutral-300">Bangalore, India</span>
+                    <div class="flex items-center space-x-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-500" viewBox="0 0 20 20"
+                        fill="currentColor">
+                        <path fill-rule="evenodd"
+                          d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                          clip-rule="evenodd" />
+                      </svg>
+                      <span class="text-neutral-300">Bangalore, India</span>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
       </section>
 
       <script>
@@ -595,7 +595,7 @@
                       <div class="w-2 h-2 bg-emerald-500 rounded-full"></div>
                       <span class="text-neutral-300">Svelte kit</span>
                     </div>
-                    
+
                   </div>
                   <div class="space-y-2">
                     <div class="flex items-center space-x-2">
@@ -988,6 +988,17 @@
                 </div>
               </div>
             </div>
+            <div class="md:col-span-2 bg-neutral-800 rounded-xl p-8 mt-8 animate__animated animate__fadeInUp">
+              <h3 class="text-2xl font-semibold text-emerald-500 mb-6">Creative Outlets</h3>
+              <div class="w-full bg-neutral-900 rounded-lg p-4">
+                <p class="text-white text-xl mb-2">Unplugged</p>
+                <p class="text-neutral-400 text-lg ">A short film I directed as a part of a college course</p>
+                <div class="mt-4 w-full flex items-center justify-center">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/mT8GdP5y7W8?si=D3eRBcR9JrwA4qIj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </section>
@@ -1361,11 +1372,10 @@
                   <textarea id="message" rows="4"
                     class="w-full bg-neutral-800 border border-neutral-700 rounded-lg px-4 py-2 text-white focus:outline-none focus:border-emerald-500"></textarea>
                 </div> -->
-                <button type="submit"
-                onclick="window.location.href = 'mailto:chandancvp08@gmail.com';"
-                  class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold py-3 rounded-lg transition-colors ">
-                  Send Me a Message
-                </button>
+              <button type="submit" onclick="window.location.href = 'mailto:chandancvp08@gmail.com';"
+                class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold py-3 rounded-lg transition-colors ">
+                Send Me a Message
+              </button>
               </form>
             </div>
           </div>
