feat: added segwise

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 Software Developer & Machine Learning Engineer
               </h2>
               <p class="text-neutral-300 mb-8 text-lg">
-                A 3rd year AI student @ Manipal, Passionate about building software around Human Centric AI | playing
+                A 4th year AI student @ Manipal, Passionate about building software around Human Centric AI | playing
                 around with LLMs, Full Stack web and Mobile dev, Computer Vision, Robotics, and scalable system
                 architecture.
                 <br>
@@ -652,6 +652,31 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <h2 class="text-3xl font-bold text-white mb-12 text-center animate__animated animate__fadeInUp">Work
             Experience</h2>
+
+              <div class="space-y-12">
+            <!-- Segwise.ai -->
+            <div class="bg-neutral-800 rounded-xl p-8 animate__animated animate__fadeInUp">
+              <div class="flex flex-col md:flex-row justify-between mb-4">
+                <div>
+                  <h3 class="text-2xl font-semibold text-emerald-500">Software Development Engineering Intern</h3>
+                  <p class="text-xl text-white">Segwise.ai</p>
+                </div>
+                <div class="text-neutral-400 mt-2 md:mt-0">
+                  June 2024 - Present
+                  <div class="text-neutral-400">Bangalore, India</div>
+                </div>
+              </div>
+              <ul class="list-disc list-inside space-y-2 text-neutral-300">
+                <li>Architected and implemented an enterprise-grade User Access Management system with hierarchical inheritance structure, significantly enhancing security and client control</li>
+                <li>Created a new Subscriptions feature enabling clients to get their reports and boards on their email or slack at their desired frequency</li>
+                <li>Developed "Fatigue Reports" helping performance marketers identify fatiguing creatives early on and take corrective actions</li>
+                <li>Created an internal tool for our customer success team to help them manage customer data and run corrective ECS tasks when required</li>
+                <li>Integrated Youtube and Google Display Network (GDN) data fetching for our clients helping them get analytics for these ads</li>
+                <li>Created a competitor tool on our dashboard helping marketers get a feed of their competitor's ads to get inspiration for their next campaigns</li>
+                <li>Maintaining backend servers written in Golang and Python</li>
+                <li>Handling deployments on AWS Fargate with end-to-end responsibility for features</li>
+              </ul>
+            </div>
 
           <div class="space-y-12">
             <!-- Andwemet -->
